# laravel-jwt-api-starter/docs/api/openapi.json
@@ -1504,18 +1504,41 @@
                     "email": {
                         "type": "string"
                     },
+                    "email_verified_at": {
+                        "type": [
+                            "string",
+                            "null"
+                        ],
+                        "format": "date-time"
+                    },
                     "role": {
                         "type": "string"
                     },
                     "is_active": {
                         "type": "boolean"
+                    },
+                    "created_at": {
+                        "type": [
+                            "string",
+                            "null"
+                        ],
+                        "format": "date-time"
+                    },
+                    "updated_at": {
+                        "type": [
+                            "string",
+                            "null"
+                        ],
+                        "format": "date-time"
                     }
                 },
                 "required": [
                     "id",
                     "name",
                     "role",
-                    "is_active"
+                    "is_active",
+                    "created_at",
+                    "updated_at"
                 ],
                 "title": "UserResource"
             }
